patient/css/booking.css
/* ... */
    
    .booking-time label>input[type="radio"]:checked+*::before {
        background: radial-gradient(#F7941C 0%, #F7941C 50%, transparent 50%, transparent);
        border-color: #F7941C;
    }
    
    .booking-time label>input[type="radio"]+* {
        display: inline-block;
        padding: 0.5rem 2rem;
    }
    
    #date-time-picker-container {
        display: flex;
        flex-direction: column;
        padding: 0 32px;
    }
    
    input[type="date"],
    input[type="time"] {
        position: relative;
    }
    
    input[type="date"]:after {
        font-family: 'FontAwesome';
        font-weight: 900;
        content: "\f073";
        color: #212529;
        padding: 0 5px;
    }
    
    input[type="time"]:after {
        font-family: 'FontAwesome';
        font-weight: 900;
        content: "\f017";
        color: #212529;
        padding: 0 5px;
    }
    
    input[type="date"]::-webkit-calendar-picker-indicator,
    input[type="time"]::-webkit-calendar-picker-indicator {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: auto;
        height: auto;
        color: transparent;
        background: transparent;
    }
    
    input[type="date"]::-webkit-inner-spin-button,
    input[type="time"]::-webkit-inner-spin-button {
        z-index: 1;
    }
    
    input[type="date"]::-webkit-clear-button,
    input[type="time"]::-webkit-clear-button {
        z-index: 1;
    }
    
    #confirm-details-section .title {
        border: none;
        border-bottom: 1px solid silver;
    }
    
    #confirm-appointment-details,
    #confirm-appointment-cost {
        border: 1px solid silver;
    }
    
    #confirm-appointment-details .input-group,
    #confirm-appointment-cost .input-group {
        border-right: none;
    }
    
    .wizard>.actions {
        text-align: center;
    }
    /* Mobile display */
    
    @media screen and (max-width: 758px) {
        .appt-booking .page-content {
            margin: 0;
            min-width: 95%;
            max-width: 95%;
        }
        .margin {
            margin-left: 0px;
            margin-right: 0px;
        }
        .size {
            flex-wrap: wrap!important;
        }
        .body {
            font-size: medium;
        }
        .border-btm {
            border: solid 1px #e5e5e5;
            margin-left: 0px !important;
            margin-right: 0px !important;
            text-align: -webkit-center;
        }
        .card-body,
        .booking-card {
            padding-top: 10px;
        }
        .wizard>.actions>ul {
            width: 100%;
            display: flex;
            justify-content: space-between;
        }
        .wizard>.actions>ul a {
            border-radius: 0;
        }
        .col-md-12 {
            padding: .3rem;
        }
        .patient-details .col-12 {
            padding-left: 0;
            padding-right: 0;
        }
        .md-col {
            flex-direction: column;
        }
        .form-control {
            border-radius: 0;
        }
        .patient-details {
            border: none;
            padding: 0;
            margin-bottom: 2em;
        }
        .booking-step {
            display: none;
        }
        .wizard .content .body {
            padding-top: 0;
        }
        #mobile-page-logo {
            height: 2.5em;
        }
        #mobile-page-close {
            font-size: 1.5em;
            cursor: pointer;
            font-weight: 1000;
        }
        .wizard>.actions {
            position: fixed;
            right: 0;
            bottom: 0;
            left: 0;
            z-index: 1030;
            background-color: white;
            padding: 1em;
        }
        .booking-time {
            width: 100%;
            text-align: start;
        }
        .booking-time label>input[type="radio"]+* {
            padding-left: 0;
            padding-right: 0;
        }
        .cost {
            border-top: solid 1px gray;
            border-bottom: solid 1px gray;
        }
        .cost .preview {
            font-size: 2.3em;
        }
        .input-group#confirm-appointment-cost {
            padding-bottom: 0;
        }
        .input-group#confirm-appointment-details {
            border: solid 1px gray;
        }
        .input-group {
            border-right: none;
        }
        .row,
        .text-center,
        .m-t-10 {
            border: none!important;
        }
    }

